welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: ')' expected but 'else' found.
	if(getPos()==(getMondeHauteur()-1,getMondeHauteur()-1){true}else{false}
                                                                    ^